--- a/dashboard.html
+++ b/dashboard.html
@@ -45,7 +45,7 @@
   <!-- /.navbar -->
 
   <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-test elevation-4">
+  <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="index3.html" class="brand-link">
       <img src="dist/img/圖片7.png" alt="Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
@@ -277,7 +277,7 @@
                 </div>
                 <div class="product-info">
                   <a href="javascript:void(0)" class="product-title">JobName001 Report
-                    <span class="badge badge-warning float-right">Download</span></a>
+                    <span class="badge badge-secondary float-right">Download</span></a>
                     <span class="product-description">
                       2022-12-03 16:01:44 ~2022-12-03 16:17:06
                     </span>
