--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/adminlte.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.20/datatables.min.css"/>
 </head>
 <!--
 `body` tag options:
@@ -37,7 +38,9 @@
       <li class="nav-item">
         <figure>
           <figcaption>admin</figcaption>
-          <img src="dist/img/img2.png" width=50 hieght=50/>       
+          <!-- <button type="button" width=50 hieght=50><img src="dist/img/img2.png" id="logout" name="logout" width=50 hieght=50/></button> -->
+          <img src="dist/img/img2.png" id="logout" name="logout" width=50 hieght=50 "/>
+          <!-- <input type="image" src="dist/img/img2.png" style="border: double;" height="50" width="50"/>  -->
        </figure>
       </li>
     </ul>
@@ -326,5 +329,9 @@
 <script src="dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="dist/js/pages/dashboard3.js"></script>
+
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.20/datatables.min.js"></script>
+
+<script src="dist/js/main.js"></script>
 </body>
 </html>
