--- a/scan_process.html
+++ b/scan_process.html
@@ -152,7 +152,7 @@
               <div class="form-group row">
                 <label for="inputName" class="col-sm-2 col-form-label">Scan Item</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" id="inputName" placeholder="Name" value="port scan" disabled="true">
+                  <input type="text" class="form-control" id="inputName" placeholder="Name" value="Vulnerability Scan" disabled="true">
                 </div>
               </div>
             </li>
